--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,15 +1,22 @@
-.nav{
+.container {
+    margin-bottom: 60px;
+}
+
+.navList {
     display: flex;
-    align-items: center;
-    gap: 15px;
-    padding: 15px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(107, 107, 255);
 }
-.link{
+
+.link {
+    display: block;
+    font-size: 15px;
     text-decoration: none;
-    color: black;
-    font-weight: bold;
+    border-radius: 10px 10px 0 0;
+    padding: 16px;
+    color: rgb(107, 107, 255);
 }
-.active{
-    color: red;
+
+.active {
+    color: #fff;
+    background-color: rgb(107, 107, 255);
 }
