--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,15 +1,42 @@
-.backLink{
-    border: 1px solid black;
-    background-color: rgb(198, 191, 191);
-    color: black;
+.homeLink {
+    display: block;
+    width: 80px;
     text-decoration: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 45px;
-    height: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 15px;
+    border-radius: 10px;
+    color: rgb(107, 107, 255);
+    border: solid 1px;
+    text-align: center;
+    padding: 10px;
 }
-.container{
+
+.homeLink:hover {
+    color: #fff;
+    background-color: rgb(107, 107, 255);
+}
+
+.list {
     display: flex;
-    align-items: center;
-    gap: 20px;
+    gap: 40px;
+    text-decoration: none;
+    margin-bottom: 40px;
+}
+
+.link {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 10px;
+    color: rgb(107, 107, 255);
+    border: solid 1px;
+    text-align: center;
+    padding: 10px;
+}
+
+.link:hover {
+    color: #fff;
+    background-color: rgb(107, 107, 255);
 }
