--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,22 +1,15 @@
-.container {
-  margin-bottom: 60px;
+.nav{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 15px;
+    border-bottom: 1px solid black;
 }
-
-.navList {
-  display: flex;
-  border-bottom: 1px solid rgb(187, 79, 236);
+.link{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
-
-.link {
-  display: block;
-  font-size: 15px;
-  text-decoration: none;
-  border-radius: 10px 10px 0 0;
-  padding: 16px;
-  color: rgb(187, 79, 236);
-}
-
-.active {
-  color: #fff;
-  background-color: rgb(187, 79, 236);
+.active{
+    color: red;
 }
